added swagger auth
